// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remark prism plugin does not handle inline code if noInlineHighlight: true 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "some text ",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 35,
              "line": 1,
              "offset": 34,
            },
            "indent": Array [],
            "start": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "type": "inlineCode",
          "value": "containing inline code",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 35,
          "line": 1,
          "offset": 34,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 35,
      "line": 1,
      "offset": 34,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates a <pre> tag with a custom class prefix if configured 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 17,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"js\\"><pre class=\\"custom-js\\"><code class=\\"custom-js\\"><span class=\\"token comment\\">// Fake</span></code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates a <pre> tag with aliases applied 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "foobar",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 21,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"javascript\\"><pre class=\\"language-javascript\\"><code class=\\"language-javascript\\"><span class=\\"token comment\\">// Fake</span></code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates a <pre> tag with aliases that do not exist 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "foobar",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 21,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"foobar\\"><pre class=\\"language-foobar\\"><code class=\\"language-foobar\\">// Fake</code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates a <pre> tag with class="language-*" prefix by default 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 17,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"js\\"><pre class=\\"language-js\\"><code class=\\"language-js\\"><span class=\\"token comment\\">// Fake</span></code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates a <pre> tag with highlighted lines 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{2}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 5,
          "offset": 27,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight has-highlighted-lines\\" data-language=\\"js\\"><pre class=\\"language-js\\"><code class=\\"language-js\\"><span class=\\"token comment\\">// 1</span>
<span class=\\"gatsby-highlight-code-line\\"><span class=\\"token comment\\">// 2</span></span><span class=\\"token comment\\">// 3</span></code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 5,
      "offset": 27,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates an inline <code> tag that handles language specifiers 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "html",
          "value": "<code class=\\"language-css\\"><span class=\\"token selector\\">.foo</span> <span class=\\"token punctuation\\">{</span> <span class=\\"token property\\">color</span><span class=\\"token punctuation\\">:</span> red <span class=\\"token punctuation\\">}</span></code>",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 29,
      "line": 1,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates an inline <code> tag with a custom class prefix if configured 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "html",
          "value": "<code class=\\"custom-text\\">foo bar</code>",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates an inline <code> tag with aliases applied 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "html",
          "value": "<code class=\\"language-javascript\\">Fake</code>",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin generates an inline <code> tag with class="language-*" prefix by default 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "html",
          "value": "<code class=\\"language-text\\">foo bar</code>",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin numberLines adds line-number markup when configured globally 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 4,
          "offset": 31,
        },
        "indent": Array [
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"js\\"><pre style=\\"counter-reset: linenumber NaN\\" class=\\"language-js line-numbers\\"><code class=\\"language-js\\"><span class=\\"token comment\\">//.foo { </span>
color<span class=\\"token operator\\">:</span> red<span class=\\"token punctuation\\">;</span>
 <span class=\\"token punctuation\\">}</span>\`</code><span aria-hidden=\\"true\\" class=\\"line-numbers-rows\\" style=\\"white-space: normal; width: auto; left: 0;\\"><span></span><span></span><span></span></span></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 4,
      "offset": 31,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin numberLines adds line-number markup when necessary 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{numberLines:5}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 4,
          "offset": 46,
        },
        "indent": Array [
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"js\\"><pre style=\\"counter-reset: linenumber 4\\" class=\\"language-js line-numbers\\"><code class=\\"language-js\\"><span class=\\"token comment\\">//.foo { </span>
color<span class=\\"token operator\\">:</span> red<span class=\\"token punctuation\\">;</span>
 <span class=\\"token punctuation\\">}</span>\`</code><span aria-hidden=\\"true\\" class=\\"line-numbers-rows\\" style=\\"white-space: normal; width: auto; left: 0;\\"><span></span><span></span><span></span></span></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 4,
      "offset": 46,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin numberLines does not add line-number markup when not configured globally 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 4,
          "offset": 31,
        },
        "indent": Array [
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"js\\"><pre class=\\"language-js\\"><code class=\\"language-js\\"><span class=\\"token comment\\">//.foo { </span>
color<span class=\\"token operator\\">:</span> red<span class=\\"token punctuation\\">;</span>
 <span class=\\"token punctuation\\">}</span>\`</code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 4,
      "offset": 31,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin promptUser/promptHost adds prompts if promptHost set 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "bash{promptHost:server}",
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 2,
          "offset": 41,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"bash\\"><pre class=\\"language-bash\\"><code class=\\"language-bash\\"><span class=\\"command-line-prompt\\"><span data-user=root data-host=server></span></span><span class=\\"token builtin class-name\\">echo</span> <span class=\\"token string\\">'test'</span>\`\`\`</code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 15,
      "line": 2,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin promptUser/promptHost adds prompts if promptUser and promptHost set 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "bash{promptUser:alice}{promptHost:server}",
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 2,
          "offset": 59,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"bash\\"><pre class=\\"language-bash\\"><code class=\\"language-bash\\"><span class=\\"command-line-prompt\\"><span data-user=alice data-host=server></span></span><span class=\\"token builtin class-name\\">echo</span> <span class=\\"token string\\">'test'</span>\`\`\`</code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 15,
      "line": 2,
      "offset": 59,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark prism plugin promptUser/promptHost adds prompts if promptUser set 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "bash{promptUser:alice}",
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 2,
          "offset": 40,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class=\\"gatsby-highlight\\" data-language=\\"bash\\"><pre class=\\"language-bash\\"><code class=\\"language-bash\\"><span class=\\"command-line-prompt\\"><span data-user=alice data-host=localhost></span></span><span class=\\"token builtin class-name\\">echo</span> <span class=\\"token string\\">'test'</span>\`\`\`</code></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 15,
      "line": 2,
      "offset": 40,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
